# SlicerSequenceRegistration

./: .gitattributes  CMakeLists.txt  README.md
Elastix4D/: CMakeLists.txt  Elastix4D.py
Elastix4D/Resources/RegistrationParameters/: Par0017_cartilage_RigidLMI.txt  Parameters0030_Affine.txt  Parameters0030_Bspline.txt  Parameters0030_Euler.txt  Rigid_parameter-file.txt
SequenceRegistration/: CMakeLists.txt  SequenceRegistration.py
